--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 			background-color:#ffffff;
 		}
 	</style>
-
 	<!-- :::::::::::::::::::::::::::::::: Google Tracking Code - CMHC :::::::::::::::::::::::::::::::::: -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,6 +31,7 @@
 	<!-- ::::::::::::::::::::::::::::::: End Google Tracking Code - CMHC ::::::::::::::::::::::::::::: -->
 
 
+	<script src="https://use.fontawesome.com/451ef792be.js"></script>
 
 	<meta name="google-site-verification" content="U8Xv3xRoch6d45f95HQs0SYDSh2u3x7JQpAV-ANPquU" />
 </head>
@@ -176,7 +176,78 @@
 </div>
 
 
-
+<div class="row row-top-white">
+	<div class="container-fluid">
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="#"><b>24/7 Crisis Line: <br/> 512-471-CALL (2255) <br/>(UT Students Only)</b></a>
+					<a href="#">Walk-in Crisis Services</a>
+					<a href="#">Be That One - UT's Suicide Prevention Program</a>
+					<a href="#">Suicide warning signs</a>
+					<a href="#">Help a friend in distress</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Self-Help <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="#">Thrive at UT</a>
+					<a href="#">MindBody Lab</a>
+					<a href="#">Help a friend in distress</a>
+					<a href="#">Online anonymous self-assessment</a>
+					<a href="#">Request a workshop</a>
+					<a href="#">Get involved</a>
+					<a href="#">Off-campus counseling / mental health resources</a>
+					<a href="#">Stress Recess</a>
+					<div class="submenubtn"><a href="#"><b>List of common student concerns </b> <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+					</a>
+						<div class="dropdown-content sub-dropdown-content">
+							<a href="#">Concern #1</a>
+							<a href="#">Concern #2</a>
+							<a href="#">Concern #3</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Counseling <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="#"><b>Getting Started</b></a>
+					<a href="#">Groups & classes</a>
+					<a href="#">Mindful eating program</a>
+					<a href="#">Alcohol and other drug program</a>
+					<a href="#">Medication and psychiatric services</a>
+					<a href="#">Services for survivors of sexual assault</a>
+					<a href="#">C.A.R.E. program</a>
+					<a href="#">Diversity coordinators</a>
+					<a href="#">Integrated health</a>
+					<a href="#">Off-campus counseling / mental health resources</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 custom3 ">
+			<div class="dropdown">
+				<button class="dropbtn">Prevention & Outreach <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<div class="dropdown-content">
+					<a href="#"><b>About Prevention & Outreach</b></a>
+					<a href="#">Voices Against Violence - UT's Interpersonal Violence Prevention Program</a>
+					<a href="#">Be That One - UT's Suicide Prevention Program</a>
+					<a href="#">BeVocal - UT's Bystander Intervention Program</a>
+					<a href="#">Theatre for Dialogue</a>
+					<a href="#">Request a workshop</a>
+					<a href="#">Student involvement</a>
+					<a href="#">Get Sexy, Get Consent</a>
+					<a href="#">Diversity coordinators</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
