--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Self-Help <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Self-Help Resources <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#">Thrive at UT</a>
 					<a href="#">MindBody Lab</a>
@@ -215,7 +215,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Counseling <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Counseling & Mental Health <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"><b>Getting Started</b></a>
 					<a href="#">Groups & classes</a>
