--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="common.css">
+	<script src="js/jquery-3.1.1.min.js"></script>
 	<link rel="icon"
 		  type="image/png"
 		  href="http://www.utexas.edu/favicon.ico">
@@ -177,12 +178,11 @@
 	<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
 </div>
 
-
 <div class="row row-top-white"><BR>
 	<div class="container-fluid">
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown"><b>24/7 Crisis Line: <br/> 512-471-CALL (2255) <br/>(UT Students Only)</b></a>
 					<a href="#"class="a_class_dropdown">Walk-in Crisis Services</a>
@@ -194,7 +194,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Self-Help Resources <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Self-Help Resources <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown">Thrive at UT</a>
 					<a href="#"class="a_class_dropdown">MindBody Lab</a>
@@ -204,12 +204,38 @@
 					<a href="#"class="a_class_dropdown">Get involved</a>
 					<a href="#"class="a_class_dropdown">Off-campus counseling / mental health resources</a>
 					<a href="#"class="a_class_dropdown">Stress Recess</a>
-					<div class="submenubtn"><a href="#"><b>List of common student concerns </b> <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+					<div class="submenubtn"><a href="#"><b>List of common student concerns </b> <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none" aria-hidden="true"></i>
 					</a>
 						<div class="dropdown-content sub-dropdown-content">
-							<a href="#"class="a_class_dropdown">Concern #1</a>
-							<a href="#"class="a_class_dropdown">Concern #2</a>
-							<a href="#"class="a_class_dropdown">Concern #3</a>
+							<a href="#"class="a_class_dropdown">Alcohol & Drugs</a>
+							<a href="#"class="a_class_dropdown">Anger</a>
+							<a href="#"class="a_class_dropdown">Anxiety</a>
+							<a href="#"class="a_class_dropdown">Assertiveness</a>
+							<a href="#"class="a_class_dropdown">Building Friendships</a>
+							<a href="#"class="a_class_dropdown">Cultural Adjustment</a>
+							<a href="#"class="a_class_dropdown">Dating & Relationship Violence</a>
+							<a href="#"class="a_class_dropdown">Depression</a>
+							<a href="#"class="a_class_dropdown">Eating Disorders</a>
+							<a href="#"class="a_class_dropdown">Gambling</a>
+							<a href="#"class="a_class_dropdown">Grief & Loss</a>
+							<a href="#"class="a_class_dropdown">Healthy Relationships</a>
+							<a href="#"class="a_class_dropdown">How to Help a Friend</a>
+							<a href="#"class="a_class_dropdown">LGBTQ - Coming Out</a>
+							<a href="#"class="a_class_dropdown">Loneliness</a>
+							<a href="#"class="a_class_dropdown">Managing Stress</a>
+							<a href="#"class="a_class_dropdown">Mindful Eating Program</a>
+							<a href="#"class="a_class_dropdown">Perfectionism</a>
+							<a href="#"class="a_class_dropdown">Problematic Internet Use</a>
+							<a href="#"class="a_class_dropdown">Rape and Sexual Assault</a>
+							<a href="#"class="a_class_dropdown">Rejection & Failure</a>
+							<a href="#"class="a_class_dropdown">Self-Esteem</a>
+							<a href="#"class="a_class_dropdown">Sex & Healthy Sexuality</a>
+							<a href="#"class="a_class_dropdown">Sleep</a>
+							<a href="#"class="a_class_dropdown">Stalking</a>
+							<a href="#"class="a_class_dropdown">Suicide</a>
+							<a href="#"class="a_class_dropdown">Test Anxiety</a>
+							<a href="#"class="a_class_dropdown">Time Management</a>
+							<a href="#"class="a_class_dropdown">Veteran's Issues</a>
 						</div>
 					</div>
 				</div>
@@ -217,7 +243,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Counseling & Mental Health <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Counseling & Mental Health <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown"><b>Getting Started</b></a>
 					<a href="#"class="a_class_dropdown">Groups & classes</a>
@@ -234,7 +260,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
-				<button class="dropbtn">Prevention & Outreach <i class="fa fa-angle-double-down" aria-hidden="true"></i></button>
+				<button class="dropbtn">Prevention & Outreach <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown"><b>About Prevention & Outreach</b></a>
 					<a href="#"class="a_class_dropdown">Voices Against Violence - UT's Interpersonal Violence Prevention Program</a>
@@ -435,4 +461,25 @@
 
 
 </body>
+
+<script>
+	$(".dropbtn").click(function() {
+		$(this).next(".dropdown-content").toggle();
+		if ($(this).find(".fa-angle-double-down").is(":visible")) {
+			$(this).find(".fa-angle-double-up").show();
+			$(this).find(".fa-angle-double-down").hide();
+		} else if ($(this).find(".fa-angle-double-up").is(":visible")) {
+			$(this).find(".fa-angle-double-up").hide();
+			$(this).find(".fa-angle-double-down").show();
+		}
+	});
+
+	$(".submenubtn").click(function(e) {
+		e.preventDefault();
+		$(this).find(".sub-dropdown-content").toggle();
+		$(this).find(".fa-angle-double-up").toggle();
+		$(this).find(".fa-angle-double-down").toggle();
+	})
+</script>
+
 </html>
