Implement Blake's request

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </div><!-- (this ends the row-top-grey tag) -->
 
-<div class="row row-top-grey" id="mobile-search-container" style="display:none;height:60px;">
+<div class="row" id="mobile-search-container" style="display:none;height:60px;">
 	<center>
 	<div class="cse-branding-bottom search-container">  
 		<form name="cse_searchbox" action="https://cmhc.utexas.edu/search.html" method="get" id="cse_searchbox"> 
