--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 	<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::  END CRISIS MESSAGE  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
 </div>
 
-<div class="row row-top-white"><BR>
+<div class="row row-top-white"><br/>
 	<div class="container-fluid">
 		<div class="col-xs-12 col-sm-3 custom3 ">
 			<div class="dropdown">
@@ -353,7 +353,7 @@
 
 				<br/>
 
-				<span class="bodytext_home">Some Common Student Concerns - <a class="a_class_bodytexthomelink" href="commonconcerns.html">View all</a><BR></span>
+				<span class="bodytext_home">Some Common Student Concerns - <a class="a_class_bodytexthomelink" href="commonconcerns.html">View all</a><br/></span>
 			</div>
 		</div>
 		<div class="row">
@@ -378,7 +378,7 @@
 					<span class="homepageheader_groups">Groups & Classes</span>
 					<br/><span class="homepageheader_groups2">CMHC offers free groups and classes to help students with a variety of concerns.</span>
 					<br/><img src="images/universal/icon_groups.png" alt="groups" width="100" hspace="0" vspace="0" align="left" /><br/><span class="homepage">All groups are free and confidential.</span>
-					<br/><a class="a_class_bodytexthomelink" href="groups.html">Click here to view the schedule</a></span><BR/><BR/><BR/><BR/>
+					<br/><a class="a_class_bodytexthomelink" href="groups.html">Click here to view the schedule</a></span><br/><br/><br/><br/>
 				</div>
 			</div>
 		</div>
@@ -408,7 +408,7 @@
 
 
 		<div class="col-sm-3 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
-			<BR/><BR/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3" align="top" />
+			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3" align="top" />
 
 
 			<div class="row row-nested-space">
@@ -460,7 +460,7 @@
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12">
-					<BR/><center><A HREF="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></A></center>
+					<br/><center><A HREF="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></A></center>
 
 				</div>
 
@@ -475,7 +475,7 @@
 
 				<div class="col-sm-12 col-xs-12">
 
-					<BR/><BR/><center><span class="homepageheader_groups3">Helpful Information</span></center>
+					<br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
 				</div>
 
 
@@ -486,28 +486,28 @@
 					<div class="col-sm-5 col-xs-6 custom4">
 
 						<a class="a_class_dropdown" href="#">Contact CMHC</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">About CMHC</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Questions & answers</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Confidentiality</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Diversity</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Mission & vision</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Get involved</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Service extension fee</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">About CMHC</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Diversity</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Get involved</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</A>
 					</div>
 
 					<div class="col-sm-1 hidden-xs">
-						<center><BR><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" /></center>
+						<center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" /></center>
 					</div>
 					<div class="col-sm-6 col-xs-6 custom5">
 						<a class="a_class_dropdown" href="#">Groups & Classes</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">MindBody Lab</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">Medication & psychiatric services</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">Research Consortium</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">Graduate training programs</A>
-						<BR> <BR> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</A>
-						<BR> <BR><a class="a_class_dropdown" href="#">Forms</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</A>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</A>
+						<br/> <br/><a class="a_class_dropdown" href="#">Forms</A>
 					</div>
 				</div>
 			</div>
@@ -521,10 +521,10 @@
 		<div class="col-sm-3 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
 
 			<Center>
-				<BR/><BR/><A HREF="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></A>
-				<BR><A href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" />
-				<BR><A HREF="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></A>
-				<BR>
+				<br/><br/><A HREF="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></A>
+				<br/><A href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" />
+				<br/><A HREF="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></A>
+				<br/>
 			</center>
 			<div class="row">
 
@@ -563,13 +563,15 @@
 			</div>
 		</div>
 		<div class="col-sm-12 col-xs-12">
-			<center><BR><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
+			<center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
 		</div>
 
 
 		<div class="col-sm-12 col-xs-12">
 			<center><a class="a_class_footer" href="#">&copy;2017 The University of Texas at Austin</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a class="a_class_footer" href="#">UT Emergency Information</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Accessibility</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Report a Bias Incident</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Staff Intranet</a>
-				<BR/><BR/><BR/><BR/><BR/></div>
+				<br/><br/><br/><br/><br/>
+			</center>
+		</div>
 
 
 
