Fix footer overlaying, add footer include

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="row row-top-grey2" id="mobile-search-container" style="display:none;height:100px;">
 	<center>
 		<div class="cse-branding-bottom search-container">  
-			<form name="cse_searchbox" action="https://cmhc.utexas.edu/search.html" method="get" id="cse_searchbox"> 
+			<form name="cse_searchbox" action="https://cmhc.utexas.edu/search.html" method="get" id="cse_searchbox_mobile"> 
 				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
 				<input type="hidden" name="cof" value="FORID:11" />
 				<input type="text" class="search-input" name="q" placeholder="search..."> 
@@ -328,7 +328,7 @@
 		</div>
 
 		<div class="col-sm-4 hidden-xs" style="padding-top:45px">
-			
+
 			<span class="bodytext_home">
 				The Counseling and Mental Health Center (CMHC) provides counseling, psychiatric, consultation, and prevention services that facilitate students' academic and life goals and enhance their personal growth and well-being. <a class="a_class_bodytexthomelink" href="aboutcmhc.html">More about us.</a>
 			</span>
@@ -402,11 +402,6 @@
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
 	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-
-
-
-
-
 		<div class="col-sm-3 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
 			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3" align="top" />
 
@@ -422,46 +417,39 @@
 				<div class="col-xs-12-footerbox">
 					<a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Are you new to UT?</a>
 				</div>
-
 			</div>
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12-footerbox">
 					<a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Common Concerns</a>
 				</div>
-
 			</div>
-
-
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12-footerbox">
 					<a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Integrated Health</a>
 				</div>
-
 			</div>
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12-footerbox">
 					<a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Parents & families</a>
 				</div>
-
 			</div>
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12-footerbox">
 					<a class="btn-info-main btn-block custom" href="">&nbsp;&nbsp;Faculty & Staff</a>
-
-
 				</div>
-
 			</div>
 
 
 			<div class="row row-nested-space">
 				<div class="col-xs-12">
-					<br/><center><A HREF="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></A></center>
-
+					<br/>
+					<center>
+						<a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></a>
+					</center>
 				</div>
 
 			</div>
@@ -482,32 +470,30 @@
 
 
 				<div class="col-sm-12 col-xs-12">
-
 					<div class="col-sm-5 col-xs-6 custom4">
-
-						<a class="a_class_dropdown" href="#">Contact CMHC</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">About CMHC</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Diversity</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Get involved</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</A>
+						<a class="a_class_dropdown" href="#">Contact CMHC</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">About CMHC</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Diversity</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</a>
 					</div>
 
 					<div class="col-sm-1 hidden-xs">
 						<center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" /></center>
 					</div>
 					<div class="col-sm-6 col-xs-6 custom5">
-						<a class="a_class_dropdown" href="#">Groups & Classes</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</A>
-						<br/> <br/> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</A>
-						<br/> <br/><a class="a_class_dropdown" href="#">Forms</A>
+						<a class="a_class_dropdown" href="#">Groups & Classes</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Forms</a>
 					</div>
 				</div>
 			</div>
@@ -515,50 +501,38 @@
 		</div><!-- :::::::::::::::: END middle column in footer ::::::::::::::::::::::: -->
 
 
-
-
-
 		<div class="col-sm-3 col-xs-12"><!-- :::::::::::::::: 3rd column in footer ::::::::::::::::::::::: -->
-
-			<Center>
-				<br/><br/><A HREF="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></A>
-				<br/><A href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" />
-				<br/><A HREF="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></A>
+			<center>
+				<br/><br/><a href="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></a>
+				<br/><a href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" /></a>
+				<br/><a href="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></a>
 				<br/>
 			</center>
+
 			<div class="row">
-
+				<center>
 				<div class="visible-xs col-xs-2"></div>
-				<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" class="img-responsive" /></A></div>
-				<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook" class="img-responsive"/></A></div>
-				<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook"class="img-responsive" /></A></div>
-				<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook"class="img-responsive" /></A></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" class="img-responsive" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook" class="img-responsive"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook"class="img-responsive" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook"class="img-responsive" /></a></div>
 				<div class="visible-xs col-xs-2"></div>
-				</Center>
-
+				</center>
 			</div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
 		</div>
+	</div>
+</div>
 
-
-
-
-
-
-		<div class="col-sm-12 col-xs-12">
-
-
-		</div>
-
+<div class="row row-top-grey" style="width:inherit;margin:inherit;">
+	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 		<div class="col-sm-12 col-xs-12">
 			<div class="row">
-				<div class="col-sm-6 col-xs-12">
-					<A href="#"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="40" class="img-responsive" /></A>
+				<div class="col-sm-offset-3 col-sm-6 col-xs-12">
+					<a href="#"><img src="images/universal/vavlogo_footer.png" alt="voices against violence"  vspace="40" class="img-responsive" /></a>
 				</div>
 
-
-
-				<div class="col-sm-6 col-xs-12">
-					<A href="#"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="30" class="img-responsive" /></A>
+				<div class="col-sm-offset-3 col-sm-6 col-xs-12">
+					<a href="#"><img src="images/universal/btologo_footer.png" alt="Be That One UT's suicide prevention program" width="700" height="100" vspace="30" class="img-responsive" /></a>
 				</div>
 			</div>
 		</div>
@@ -566,17 +540,13 @@
 			<center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="100%" height="1" align="top" /></center>
 		</div>
 
-
 		<div class="col-sm-12 col-xs-12">
 			<center><a class="a_class_footer" href="#">&copy;2017 The University of Texas at Austin</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a class="a_class_footer" href="#">UT Emergency Information</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Accessibility</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Report a Bias Incident</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="a_class_footer" href="#">Staff Intranet</a>
 				<br/><br/><br/><br/><br/>
 			</center>
 		</div>
-
-
-
 	</div>
-
+</div>
 
 
 
