--- a/secondary.html
+++ b/secondary.html
@@ -71,87 +71,7 @@
 
 </div><!-- (this ends the container-fluid tag) -->
 
-
-
-
-
-<!-- :::::::::::::::::::::::::::::::::::::::::::::::::::::::::   BEGIN FOOTER   :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
-
-
-<div class="row row-top-grey" style="width:inherit;margin:inherit;">
-	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
-
-
-
-
-
-		<div class="col-sm-2 col-xs-12 custom5">
-
-			<img src="images/universal/stafficon.png" alt="meet the staff" width="180" hspace="15" vspace="15" align="top" />
-
-		</div>
-		<div class="col-sm-1 hidden-xs"></div>
-
-
-		<div class="col-sm-6 col-xs-12">
-			<div class="row">
-				<div class="col-sm-12 col-xs-12">
-
-					<BR><BR><span class="homepageheader_groups3">Helpful Information&nbsp;</span>
-				</div>
-				<div class="col-sm-5 col-xs-5 custom4">
-					<a class="a_class_dropdown" href="#">Contact CMHC</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">About CMHC</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Questions & answers</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Confidentiality</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Diversity</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Mission & vision</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Get involved</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Service extension fee</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</A>
-					<BR> <BR><a class="a_class_dropdown" href="#">Forms</A>
-				</div>
-				<div class="col-sm-1 col-xs-1">
-					<center><BR><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" align="top" /></center>
-				</div>
-				<div class="col-sm-6 col-xs-6 custom5">
-					<a class="a_class_dropdown" href="#">Groups & Classes</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">MindBody Lab</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Medication & psychiatric services</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Integrated health</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Common student concerns</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Research Consortium</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Graduate training prgrams</A>
-					<BR> <BR> <a class="a_class_dropdown" href="#">Clearinghouse abstracts</A>
-				</div>
-			</div>
-		</div>
-
-
-
-		<div class="col-sm-3 col-xs-12">
-
-			<Center>
-				<BR><A HREF="index.html"><img src="images/universal/cmhcbranding.png" alt="UT's Counseling and Mental health center" align="top" class="img-responsive" width="190" hspace="15" /></A>
-				<BR><A href="#"><img src="images/universal/thrivelogo.png" alt="Thrive free iphone app" width="110"  class="img-responsive"  hspace="15" align="top" />
-				<BR><A HREF="https://www.utexas.edu"><img src="images/universal/utlogo.png" alt="The University of Texas at Austin" width="150" hspace="15"  class="img-responsive" vspace="5" align="top" /></A>
-				<BR>
-
-				<div class="row">
-
-					<div class="visible-xs col-xs-2"></div>
-					<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" class="img-responsive" /></A></div>
-					<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook" class="img-responsive"/></A></div>
-					<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook"class="img-responsive" /></A></div>
-					<div class="col-sm-3 col-xs-2"><A href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook"class="img-responsive" /></A></div>
-					<div class="visible-xs col-xs-2"></div>
-			</Center>
-		</div>
-	</div>
-
-
-
+<!--#include virtual="include_universalfooter.html"-->
 
 </body>
 
