Integrate Blake's changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<a href="https://www.utexas.edu/student-affairs"><img src="images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
 		</div>
 
-		<div class="hidden-xs col-sm-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
+		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
 		</div>
 
 		<div class="col-xs-2 visible-xs" style="margin-top: 15px">
@@ -99,10 +99,11 @@
 			<a href="index.html"><center><img src="images/universal/cmhcbranding.png" class="img-responsive" alt="cmhc.utexas.edu" border="0" vspace="0" align="middle" /></center></a>
 		</div>
 
-		<div class=" col-sm-8 hidden-sm hidden-xs" align="left"><br/><br/><br/>
+		<div class=" col-md-8 hidden-xs" align="left"><br/><br/><br/>
 
-			<span class="homepageheader">&nbsp;We'll help you figure it out.</span>
-
+			<center><span class="homepageheader">&nbsp;We'll help you figure it out.</span></center>
+<div class="row hidden-md">
+</div>
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="contactcmhc.html"><img src="images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-4 custom7 hidden-xs"><a class="a_class_dropdown" href="contactcmhc.html"><B>512-471-3515</B><br/>Monday - Friday 8am-5pm</a></div>
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="#"><img src="images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
@@ -110,7 +111,8 @@
 			<div class="col-sm-1 hidden-xs"><a class="a_class_dropdown" href="#"><img src="images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
 			<div class="col-sm-2 custom6 hidden-xs"><a class="a_class_dropdown" href="#">MyCMHC</a></div>
 
-		</div>
+</div>
+</div>
 
 
 
@@ -201,7 +203,7 @@
 				<button class="dropbtn">Help With A Crisis <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown"><b>24/7 Crisis Line: <br/> 512-471-CALL (2255) <br/>(UT Students Only)</b></a>
-					<a href="#"class="a_class_dropdown">Walk-in Crisis Services</a>
+					<a href="#"class="a_class_dropdown">Crisis Services</a>
 					<a href="#"class="a_class_dropdown">Help a friend in distress</a>
 					<a href="#"class="a_class_dropdown">Be That One - UT's Suicide Prevention Program</a>
 					<a href="#"class="a_class_dropdown">Suicide warning signs</a>
@@ -262,6 +264,7 @@
 				<button class="dropbtn">Counseling & Medication <i class="fa fa-angle-double-down" aria-hidden="true"></i> <i class="fa fa-angle-double-up" style="display:none "aria-hidden="true"></i></button>
 				<div class="dropdown-content">
 					<a href="#"class="a_class_dropdown"><b>Getting Started</b></a>
+					<a href="#"class="a_class_dropdown">Individual counseling</a>
 					<a href="#"class="a_class_dropdown">Groups & classes</a>
 					<a href="#"class="a_class_dropdown">Mindful eating program</a>
 					<a href="#"class="a_class_dropdown">Alcohol and other drug program</a>
@@ -402,8 +405,8 @@
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
 	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 
-		<div class="col-sm-3 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
-			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3" align="top" />
+		<div class="col-sm-4 col-xs-12"> <!-- :::::::::::::::: first column in footer ::::::::::::::::::::::: -->
+			<br/><br/> <img src="images/universal/stafficon.png" alt="meet the staff" width="192" hspace="15" vspace="3"  class="img-responsive" align="top" />
 
 
 			<div class="row row-nested-space">
@@ -448,7 +451,7 @@
 				<div class="col-xs-12">
 					<br/>
 					<center>
-						<a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" width="185" /></a>
+						<a href="#"><img src="images/universal/give.png" alt="give now to UT Counseling and Mental Health" class="img-responsive" /></a>
 					</center>
 				</div>
 
@@ -458,37 +461,40 @@
 
 
 
-		<div class="col-sm-6 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
+		<div class="col-sm-5 col-xs-12">   <!-- :::::::::::::::: middle column in footer ::::::::::::::::::::::: -->
 			<div class="row">
 
-				<div class="col-sm-12 col-xs-12">
+			
 
 					<br/><br/><center><span class="homepageheader_groups3">Helpful Information</span></center>
-				</div>
+				
+</div>
 
 
-
-
+<div class="row">
 				<div class="col-sm-12 col-xs-12">
 					<div class="col-sm-5 col-xs-6 custom4">
 						<a class="a_class_dropdown" href="#">Contact CMHC</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">About CMHC</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">Questions & answers</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Crisis services</a>
+						<br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">Confidentiality</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">Diversity</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">Mission & vision</a>
-						<br/> <br/><a class="a_class_dropdown" href="#">Get involved</a>
+						
 						<br/> <br/><a class="a_class_dropdown" href="#">Service extension fee</a>
 						<br/> <br/><a class="a_class_dropdown" href="#">Medical widthdrawals & course load reductions</a>
 					</div>
 
 					<div class="col-sm-1 hidden-xs">
-						<center><br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="400" /></center>
+						<center><!-- <br/><img src="images/universal/greyfooterline.jpg" alt="graphic element used to separate sections of content" width="1" height="450" /> --></center>
 					</div>
 					<div class="col-sm-6 col-xs-6 custom5">
 						<a class="a_class_dropdown" href="#">Groups & Classes</a>
 						<br/> <br/> <a class="a_class_dropdown" href="#">MindBody Lab</a>
 						<br/> <br/> <a class="a_class_dropdown" href="#">Medication & psychiatric services</a>
+						<br/> <br/> <a class="a_class_dropdown" href="#">Common Student Concerns</a>
 						<br/> <br/> <a class="a_class_dropdown" href="#">Off-campus counseling & mental health services</a>
 						<br/> <br/> <a class="a_class_dropdown" href="#">Research Consortium</a>
 						<br/> <br/> <a class="a_class_dropdown" href="#">Graduate training programs</a>
@@ -512,10 +518,10 @@
 			<div class="row">
 				<center>
 				<div class="visible-xs col-xs-2"></div>
-				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" class="img-responsive" /></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook" class="img-responsive"/></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook"class="img-responsive" /></a></div>
-				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook"class="img-responsive" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerfacebook.png" alt="facebook" width="40"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footertwitter.png" alt="facebook"  width="40"/></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footerinstagram.png" alt="facebook" width="40" /></a></div>
+				<div class="col-sm-3 col-xs-2"><a href="#"><img src="images/universal/icon_footeryoutube.png" alt="facebook" width="40" /></a></div>
 				<div class="visible-xs col-xs-2"></div>
 				</center>
 			</div><!-- :::::::::::::::: END 3rd column in footer ::::::::::::::::::::::: -->
